# bluez-test-v2

bluez-firmware/: Makefile.in
bluez-firmware/autom4te.cache/: output.1  requests  traces.0  traces.1
bluez-libs/: Makefile  config.status
bluez-libs/src/: bluetooth.loT
v20/bluetooth-test/: CMakeLists.txt
v20/bluetooth-test/src/: CMakeLists.txt
v20/bluetooth-test/src/app/: CMakeLists.txt  l2cap_server.cpp
v20/bluetooth-test/src/l2cap/: CMakeLists.txt  l2cap.cpp  l2cap.hpp
v20/bluetooth-test/src/rfcomm/: CMakeLists.txt  rfcomm.cpp  rfcomm.hpp
v20/bluez-hcidump/: Makefile  config.status
v20/bluez-hcidump/lib/.deps/: bluetooth.Po  hci.Po
v20/bluez-hcidump/parser/.deps/: amp.Po  att.Po  avctp.Po  avdtp.Po  avrcp.Po  bnep.Po  bpa.Po  capi.Po  cmtp.Po  csr.Po  ericsson.Po  hci.Po  hcrp.Po  hidp.Po  l2cap.Po  lmp.Po  obex.Po  parser.Po  ppp.Po  rfcomm.Po  sap.Po  sdp.Po  smp.Po  tcpip.Po
v20/bluez-hcidump/src/: bpasniff  csrsniff  hcidump
v20/bluez-hcidump/src/.deps/: bpasniff.Po  csrsniff.Po  hcidump.Po
v20/bluez-libs/: config.h  libtool
v20/bluez-libs/include/: Makefile
v20/bluez-libs/src/: Makefile
v30/bluez-libs/: Hulafile
v30/bluez-libs/src/: bluetooth.loT
v30/bluez-utils/: Hulafile  libtool
